--- a/style.css
+++ b/style.css
@@ -9,9 +9,8 @@ h1 {
   
   font-family: 'Lato', sans-serif;
   font-size: 3em;
-  background-color: #00DBE6;
+  background-color: peachpuff;
   display: flex;
-  padding: 0.5em;
   text-align: center;
   justify-content: center;
   margin: 0.75em;
